--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5000",
     "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "@types/swiper": "^5.4.1",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "next": "10.0.6",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
+    "swiper": "^6.4.11",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
