--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
+    "socket.io-client": "^3.1.1",
     "swiper": "^6.4.11",
     "tailwindcss": "^2.0.2"
   },
@@ -24,6 +25,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/socket.io-client": "^1.4.35",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
