--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0",
     "socket.io-client": "^3.1.1",
     "swiper": "^6.4.11",
     "tailwindcss": "^2.0.2"
